# amqp-spec

./: .envrc  .ghci  ChangeLog.md  README.md  amqp-base.cabal  amqp-compiled.cabal  cabal.project  default.nix  extract.ghci  shell.nix
.github/workflows/: cabal.yml  ci.yml
src/Protocol/AMQP/: Attoparsec.hs  Bits.hs  Elementary.hs  Extracted.hs  FieldValue.hs  Frame.hs  Handshake.hs  TH.hs  TrackedIds.hs  Translated.hs
src/Protocol/AMQP/TH/: CPP.hs
test/: Spec.hs
test/AMQP/: ElementarySpec.hs  FieldValueSpec.hs  FrameSpec.hs  HandshakeSpec.hs  OrphanInstances.hs  TH.hs  TranslatedSpec.hs
test/Test/Validity/: ParserOf.hs
