cabal-version:      3.0
name:               amqp-compiled
version:            0.1.0.0
synopsis:           Uses TemplateHaskell to extract types from the AMQP XML specification
description:
  Compiles the AMQP XML specification (v0.9.1) to Haskell types directly using
  [Template Haskell](https://downloads.haskell.org/ghc/latest/docs/users_guide/exts/template_haskell.html#th-example).

  It includes typeclass instances for each type that allow encoding/decoding
  from a byte stream as describe in the specification.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Tim Emiola
maintainer:         adetokunbo@emio.la
category:           Web
homepage:           https://github.com/adetokunbo/amqp-compiled#readme
bug-reports:        https://github.com/adetokunbo/amqp-compiled/issues
build-type:         Simple
extra-source-files: ChangeLog.md
data-files:         spec/*.xml

source-repository head
  type:     git
  location: https://github.com/adetokunbo/amqp-compiled.git

library
  autogen-modules:  Paths_amqp_compiled
  other-modules:    Paths_amqp_compiled
  exposed-modules:
    Protocol.AMQP.Attoparsec
    Protocol.AMQP.Bits
    Protocol.AMQP.Extracted
    Protocol.AMQP.Elementary
    Protocol.AMQP.FieldValue
    Protocol.AMQP.Frame
    Protocol.AMQP.Handshake
    Protocol.AMQP.TH
    Protocol.AMQP.Translated
    Protocol.AMQP.TrackedIds

  hs-source-dirs:   src
  build-depends:
    , attoparsec           >=0.14.4   && <0.15
    , attoparsec-binary    >=0.2      && <0.3
    , attoparsec-framer
    , base                 >=4.15     && <5
    , bytestring           >=0.10.8.2 && <0.12.0.0
    , chunked-data         >=0.3.0    && <0.4
    , containers           >=0.6.5    && <0.8
    , exceptions           >= 0.10
    , pretty-simple
    , split                >=0.2.3    && <0.3
    , template-haskell     >=2.16.0   && <2.20
    , text                 >=1.2.3    && <2.2
    , validity             >=0.12.0   && <0.13
    , validity-bytestring  >=0.4.1    && <0.5
    , xml                  >=1.3.14   && <1.5

  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wpartial-fields -fwarn-tabs

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    AMQP.ElementarySpec
                    AMQP.FieldValueSpec
                    AMQP.FrameSpec
                    AMQP.OrphanInstances
                    AMQP.TH
                    AMQP.HandshakeSpec
                    AMQP.TranslatedSpec
                    Test.Validity.ParserOf
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:
    , amqp-compiled
    , attoparsec
    , attoparsec-framer
    , base
    , chunked-data
    , bytestring
    , genvalidity
    , genvalidity-bytestring
    , genvalidity-hspec
    , pretty-simple
    , hspec           >=2.1 && <2.11
    , split
    , template-haskell
    , QuickCheck

flag build-the-readme
  description: Allow the readme to build
  default:     False

test-suite readme
  if (os(windows) || !flag(build-the-readme))
    buildable: False

  else
    buildable: True

  build-tool-depends: markdown-unlit:markdown-unlit
  type:               exitcode-stdio-1.0
  ghc-options:
    -pgmL markdown-unlit -threaded -rtsopts -with-rtsopts=-N -Wall
    -Wincomplete-patterns -Wpartial-fields

  main-is:            README.lhs
  default-language:   Haskell2010
  build-depends:
    , amqp-compiled
    , base
    , hspec
